--- a/styles/main.css
+++ b/styles/main.css
@@ -4,6 +4,9 @@
 /*
 *COLORS
 */
+/*
+*BREAKPOINTS
+*/
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -203,6 +206,21 @@ img {
   padding: 40px 100px;
 }
 
+@media (max-width: 1060px) {
+  .header {
+    padding: 20px;
+  }
+}
+
+@media (max-width: 1060px) {
+  .main {
+    padding: 20px;
+  }
+  .main__container {
+    padding: 0 20px;
+  }
+}
+
 .img-responsive {
   width: 100%;
 }
@@ -299,6 +317,11 @@ img {
 
 .search input::placeholder {
   color: #1f3f68;
+}
+
+@media (max-width: 1060px) {
+  margin-top: 20px;
+  margin-bottom: 30px;
 }
 
 .article-format1 {
@@ -412,6 +435,48 @@ img {
   font-size: 1.4rem;
 }
 
+.popular {
+  border-bottom: 1px solid #000;
+  padding-bottom: 20px;
+  margin-bottom: 60px;
+}
+
+.popular__title {
+  font-size: 2rem;
+  font-weight: bold;
+  margin-bottom: 30px;
+}
+
+.popular__all {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  grid-column-gap: 20px;
+  margin-bottom: 40px;
+}
+
+.popular__article-format1 {
+  margin-bottom: 20px;
+}
+
+.popular__link {
+  text-align: right;
+  font-size: 1.6rem;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+.popular__link a {
+  color: #356EAD;
+}
+
+@media (max-width: 860px) {
+  .popular {
+    padding: 20px;
+  }
+}
+
 .footer {
   background: #316099;
   color: #fff;
@@ -472,42 +537,6 @@ img {
   border-bottom: 1px solid #fff;
   padding-bottom: 10px;
   margin-bottom: 10px;
-}
-
-.popular {
-  border-bottom: 1px solid #000;
-  padding-bottom: 20px;
-  margin-bottom: 60px;
-}
-
-.popular__title {
-  font-size: 2rem;
-  font-weight: bold;
-  margin-bottom: 30px;
-}
-
-.popular__all {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (1fr)[3];
-      grid-template-columns: repeat(3, 1fr);
-  grid-column-gap: 20px;
-  margin-bottom: 40px;
-}
-
-.popular__article-format1 {
-  margin-bottom: 20px;
-}
-
-.popular__link {
-  text-align: right;
-  font-size: 1.6rem;
-  text-transform: uppercase;
-  font-weight: bold;
-}
-
-.popular__link a {
-  color: #356EAD;
 }
 
 .allarticles__title {
